tests/baselines/reference/ES5For-ofTypeCheck11.errors.txt
ES5For-ofTypeCheck11.ts(3,6): error TS2322: Type 'string | number' is not assignable to type 'string'.
  Type 'number' is not assignable to type 'string'.


==== ES5For-ofTypeCheck11.ts (1 errors) ====
    var union: string | number[];
    var v: string;
    for (v of union) { }
         ~
!!! error TS2322: Type 'string | number' is not assignable to type 'string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.